--- a/User/forgetpassword/CSS/forgpas.css
+++ b/User/forgetpassword/CSS/forgpas.css
@@ -31,7 +31,7 @@ body {
 form {
     position: absolute;
     width: 458px;
-    height: 589px;
+    height: 358px;
     top: 56.5%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -43,32 +43,29 @@ form {
 }
 
 form h1{
-    margin-top: 30px;
-    font-size: 30px;
+    margin-top: 40px;
+    font-size: 32px;
     font-family: 'mukta' , 'sans-serif';
     font-weight: 1000;
 }
 
 form p {
-    margin-top: 0px;
+
     font-family: 'mukta' , 'sans-serif';
+    text-decoration: underline;
+    color: #383838;
+    
 }
 
 form p a {
     text-decoration: none;
-    color: #3083FF ;
+    color: #383838 ;
+    font-size: 16px;
 }
 
-
-form .login .input-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-}
-
-form .login input {
+.mailcont .inputcont input {
     width: 318px; 
-    height: 42px;
+    height: 43px;
     border-radius: 10px;
     margin-top: 10px;
     box-sizing: border-box;
@@ -78,79 +75,37 @@ form .login input {
     padding-left: 35px;
 }
 
-form .login #fgrtpass {
-    margin-top: 5px;
-    font-size: 12px;
-    margin-right: 80px;
-    color: #383838;
-   
-}
-
-
-
-form .login #btnlgn {
-    margin-top: 5px;
-    width: 174px;
-    height: 42px;
-    border-radius: 20px;
-    color:white;
-    font-size: 16px;
+.mailcont button {
+    margin-top: 30px;
+    width: 318px;
+    height: 43px;
+    border-radius: 5px;
     background-color: #383838;
-    border: 2px solid transparent; 
-    cursor: pointer; 
+    border: 2px solid transparent;
+    cursor: pointer;
+    color: white; /* Tambahkan baris ini */
 }
 
-form .login #btnlgn:hover {
-    color: #3083FF
+
+
+
+
+
+#btnpass {
+    text-decoration: none;
+    font-size: 16px;
+    color:white;
 }
 
-.separator {
-    display: flex;
-    align-items: center;
-    text-align: center;
-    margin-top: 20px; 
-    margin-bottom: 20px; 
+#btnpass:hover {
+    color: #3083FF;
 }
 
-.separator .line {
-    flex-grow: 1;
-    height: 1px;
-    background-color: #D9D9D9; 
-}
 
-.separator .text {
-    margin: 5px 15px; 
-    color: #363636; 
-    font-family: 'mukta' , 'sans-serif';
-}
 
-#gglbtn {
-margin-left: 75px;
-}
-.gglbtn {
-    display: flex;
-    
-    align-items: center;
-    justify-content: center;
-    width: 318px; 
-    height: 43px; 
-    background-color: #fff; 
-    border: 1px solid #BDBDBD; 
-    border-radius: 10px; 
-    padding: 5px 10px; 
-    cursor: pointer; 
-    font-size: 14px; 
-    font-weight: bold; 
-    text-align: center; 
-    text-decoration: none; 
-    color: #000; 
-}
 
-.gglbtn img {
-    width: 24px; 
-    height: 24px; 
-    margin-right: 10px; 
-}
+
+
 
 
 
@@ -175,15 +130,6 @@ footer {
     align-items: center; 
     font-family: 'inter' , 'sans-serif';
 }
-
-#terms {
-    display: block;
-    margin-top: 15px;
-    margin-left: 50px;
-    margin-right: 50px;
-    text-align: left;
-}
-
 
 
 /* Untuk tampilan desktop */
